--- a/UnitsAndSigFigs.ipynb
+++ b/UnitsAndSigFigs.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.04 ×10⁻⁰⁸kM\n",
-      "a³²\n"
+      "1.04 ×10⁻⁰³mM\n"
      ]
     }
    ],
@@ -20,9 +19,13 @@
     "def scientific_notation_10(x):\n",
     "    xx=x.split('e')\n",
     "    sup=''\n",
-    "    for i in range(len(xx[1])):\n",
-    "        sup+=unicode_super(xx[1][i])\n",
-    "    return xx[0]+' '+u\"\\u00D7\"+'10'+sup\n",
+    "    #print(int(xx[1]))\n",
+    "    if int(xx[1])==0:\n",
+    "        return xx[0]+' '\n",
+    "    else:\n",
+    "        for i in range(len(xx[1])):\n",
+    "            sup+=unicode_super(xx[1][i])\n",
+    "        return xx[0]+' '+u\"\\u00D7\"+'10'+sup\n",
     "    \n",
     "def round_to_sig_fig(num, unit='', sigfig=3, scientific_notation=False, unit_suffix='', unit_prefix=''):\n",
     "    divide = multiplier(unit)\n",
@@ -125,10 +128,9 @@
     "\n",
     "temp1=2.56500147e-02\n",
     "temp2=2.67620467e-18\n",
-    "temp3=10.4352435e-06\n",
+    "temp3=10.4352435e-07\n",
     "\n",
-    "print(round_to_sig_fig(temp3, unit='kilo', sigfig=3, scientific_notation=True, unit_suffix='M'))\n",
-    "print('a'+unicode_super(3)+unicode_super(2))"
+    "print(round_to_sig_fig(temp3, unit='mili', sigfig=3, scientific_notation=True, unit_suffix='M'))"
    ]
   },
   {
