--- a/UnitsAndSigFigs.ipynb
+++ b/UnitsAndSigFigs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.04 ×10⁻⁰³mM\n"
+      "2.68 ×10⁻¹⁸\n"
      ]
     }
    ],
@@ -27,8 +27,14 @@
     "            sup+=unicode_super(xx[1][i])\n",
     "        return xx[0]+' '+u\"\\u00D7\"+'10'+sup\n",
     "    \n",
-    "def round_to_sig_fig(num, unit='', sigfig=3, scientific_notation=False, unit_suffix='', unit_prefix=''):\n",
-    "    divide = multiplier(unit)\n",
+    "def round_to_sig_fig(num, unit='', sigfig=3, scientific_notation=False, suffix='', prefix=''):\n",
+    "    if type(unit)==str:\n",
+    "        symbol=unit_symbol(unit)\n",
+    "        divide = multiplier(unit)\n",
+    "    elif type(unit)==float:\n",
+    "        divide=unit\n",
+    "        symbol=''\n",
+    "    \n",
     "    ans_temp=num/divide\n",
     "    \n",
     "    digits_before_decimal=0\n",
@@ -47,13 +53,13 @@
     "        form='{:.'+str(sigfig-1)+'e}'\n",
     "        #(sig-1) is there because python forces the result to be in the format x.xx\n",
     "        temp=form.format(ans)\n",
-    "        return scientific_notation_10(temp)+unit_symbol(unit)+unit_suffix\n",
+    "        return scientific_notation_10(temp)+prefix+symbol+suffix\n",
     "    elif scientific_notation==False:\n",
     "        if round_upto>0:\n",
     "            form='{:.'+str(round_upto)+'f}'\n",
     "        elif round_upto<=0:\n",
     "            form='{:.0f}'\n",
-    "        return form.format(ans)+' '+unit_symbol(unit)+unit_suffix\n",
+    "        return form.format(ans)+' '+prefix+symbol+suffix\n",
     "    \n",
     "def unit_symbol(u):\n",
     "    prefix = {'deci': 'd',\n",
@@ -130,7 +136,7 @@
     "temp2=2.67620467e-18\n",
     "temp3=10.4352435e-07\n",
     "\n",
-    "print(round_to_sig_fig(temp3, unit='mili', sigfig=3, scientific_notation=True, unit_suffix='M'))"
+    "print(round_to_sig_fig(temp2, unit='', sigfig=3, scientific_notation=True, suffix=''))"
    ]
   },
   {
